# smartsurge

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: index.md  installation.md  usage.md
docs/api/: client.md  exceptions.md  models.md  streaming.md  utilities.md
docs/examples/: basic_usage.md  rate_limiting.md  streaming.md
src/smartsurge/: .codiumai.jl  __init__.py  client.py  exceptions.py  logging_.py  models.py  utilities.py
src/smartsurge/docs/: index.md
src/smartsurge/docs/api/: client.md
tests/: __init__.py  test_client.py  test_models.py  test_streaming.py  test_utilities.py
tests/local/: test_07_client.py
